# SchrodingerEquation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  beam_conf.json  commit_style.txt  graph.py  interface.py  main.cpp  main.cu  main.py  main_dump_20221207.cpp  main_dump_20230831.cpp  main_old.cu  main_stable.cu  main_stable_beam.cu  main_stable_test.cu  sph_example_cuda.cu  sph_example_cuda_2.cu  sph_example_cuda_methods.cu  sph_example_cuda_openmp.cu  sph_example_linear.cpp  sph_example_openmp.cpp
besse/: info.txt
config/: beam_conf.json
data/bi_soliton_1000_1000/: info.txt
data/bi_soliton_1000_1000_0_10/: info.txt
data/bi_soliton_2000_2000/: info.txt
data/bi_soliton_400_400/: abs.txt  abs_analytic.txt  error_matrix.txt  imag.txt  imag_analytic.txt  info.txt  real.txt  real_analytic.txt
data/bi_soliton_500_500/: abs.txt  error_matrix.txt  imag.txt  info.txt  real.txt
data/exp_ix_400_400/: abs.txt  error_matrix.txt  error_matrix_avg.txt  imag.txt  imag_analytic.txt  info.txt  real.txt  real_analytic.txt
data/exp_ix_400_400_Mu/: info.txt
data/exp_ix_400_400_lambda_minus2/: abs.txt  abs_analytic.txt  error_matrix.txt  imag.txt  imag_analytic.txt  info.txt  real.txt  real_analytic.txt
data/nush_analogue/: abs.txt  abs_square.txt  imag.txt  real.txt
data/nush_analogue_1000_E0_0/: T=14.985015.txt  T=22.477522.txt  T=29.970030.txt  T=7.492507.txt  beam_width.txt
data/nush_analogue_1000_E0_01/: T=14.985015.txt  T=22.477522.txt  T=29.970030.txt  T=7.492507.txt  beam_width.txt
data/nush_analogue_1000_E0_05/: T=0.000000.txt  T=14.985015.txt  T=22.477522.txt  T=29.970030.txt  T=7.492507.txt  beam_width.txt
data/nush_analogue_1000_E0_1/: T=14.985015.txt  T=22.477522.txt  T=29.970030.txt  T=7.492507.txt  beam_width.txt
data/nush_analogue_1000_FF0_m2/: G_alpha_s.txt  G_alpha_s_sum.txt  T=14.985015.txt  T=22.477522.txt  T=29.970030.txt  T=7.492507.txt  beam_width.txt  delta_alpha_s.txt
data/nush_analogue_1000_FF0_m3/: G_alpha_s.txt  G_alpha_s_sum.txt  T=14.985015.txt  T=22.477522.txt  T=29.970030.txt  T=7.492507.txt  beam_width.txt  delta_alpha_s.txt
data/nush_analogue_1000_FF0_m4/: G_alpha_s.txt  G_alpha_s_sum.txt  T=14.985015.txt  T=22.477522.txt  T=29.970030.txt  T=7.492507.txt  beam_width.txt  delta_alpha_s.txt
data/nush_analogue_250_250_0_30_E0_1/: T=11.952191.txt  T=17.928287.txt  T=23.904382.txt  T=29.880478.txt  T=5.976096.txt  abs.txt  abs_square.txt  imag.txt  real.txt
data/nush_analogue_250_250_0_30_E0_5/: T=0.000000.txt  T=11.952191.txt  T=17.928287.txt  T=23.904382.txt  T=29.880478.txt  T=5.976096.txt  abs.txt  abs_square.txt  imag.txt  real.txt
data/nush_analogue_250_PI_E0_10/: T=0.000000.txt  T=0.996016.txt  T=1.992032.txt  T=2.988048.txt  T=3.984064.txt  T=4.980080.txt  abs.txt  abs_square.txt  imag.txt  real.txt
data/nush_analogue_500_500/: G_alpha_s.txt  delta_alpha_s.txt  info.txt
data/nush_analogue_500_500_0_30/: G_alpha_s.txt
data/nush_analogue_500_500_0_30_E0_01/: T=0.000000.txt  T=11.976048.txt  T=17.964072.txt  T=23.952096.txt  T=29.940120.txt  T=5.988024.txt
data/nush_analogue_500_500_0_30_E0_1/: T=11.976048.txt  T=17.964072.txt  T=23.952096.txt  T=29.940120.txt  T=5.988024.txt
data/nush_analogue_500_500_0_30_E0_10/: G_alpha_s_sum.txt  T=11.976048.txt  (+4 more)
(+69 files in other folders)
